Removing the /hello endpoint
