# backend/internal/server/server.go
@@ -45,7 +45,6 @@ func New(cfg config.Config, logger *slog.Logger) (*Server, error) {
 	}
 
 	mux := http.NewServeMux()
-	mux.Handle("/hello", &handler.Hello{})
 	mux.Handle("/openapi.yaml", &handler.OpenAPI{})
 	livez := &handler.Livez{}
 	mux.Handle("/livez", livez)
